--- a/dennisivycrashcourse/accounts/templates/accounts/customer.html
+++ b/dennisivycrashcourse/accounts/templates/accounts/customer.html
@@ -55,7 +55,7 @@
 				<tr>
 					<th>Product</th>
 					<th>Category</th>
-					<th>Date Orderd</th>
+					<th>Date Ordered</th>
 					<th>Status</th>
 					<th>Update</th>
 					<th>Remove</th>
